src/App.css
.App {
  font-family: Arial, Helvetica, sans-serif;
}

html,
body {
  margin: 0%;
  padding: 0%;
}

body {
  background: url('./images/backgroundImg.jpg') center center/cover;
  height: 100vh;
  width: 100%;
  align-items: center;
  background-attachment: fixed;

}

.topPage {
  width: 90%;
  margin-top: 500px;
  margin-right: auto;
  margin-left: auto;
  background-color: rgb(224, 251, 252);
  height: fit-content;
  max-width: 100%;
  height: auto;
  overflow: auto;
}

.title {
  text-decoration: underline;
  text-decoration-color: rgb(61, 90, 128);
  text-decoration-thickness: 4px;
  margin-left: 25px;
  margin-bottom: 25px;
  padding-top: 15px;
}

